Fixing compilation failure in StyleResolver.cpp/CSSParser.cpp https://bugs.webkit.org/show_bug.cgi?id=89892

Patch by Mike West <mkwst@chromium.com> on 2012-06-25
Reviewed by Alexis Menard.

Adding CSSPropertyVariable to switch statements in CSSParser and
StyleResolver to fix compilation errors under ninja/clang. I've
added both as new cases to the switches, with FIXME comments for
implementation.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseValue):
* css/StyleResolver.cpp:
(WebCore::StyleResolver::collectMatchingRulesForList):

Canonical link: https://commits.webkit.org/107764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121192 268f45cc-cd09-0410-ab3c-d52691b4dbfc